# Dj_Linguify

./: .coveragerc  README.md  behave.ini  db.sqlite3  pyproject.toml
.functional_tests/features/: create_text.feature  tag_word.feature
.functional_tests/features/steps/: given.py  then.py  when.py
.functional_tests/steps/: given.py  then.py  when.py
accounts/: models.py
accounts/migrations/: 0001_initial.py
api/: serializers.py  urls.py  views.py
api/tests/: test_endpoints.py
content/: models.py
content/migrations/: 0001_initial.py  0002_text_name.py  0003_text_body.py  0004_word.py  0005_alter_word_status.py  0006_alter_word_name.py  0007_word_text.py  0008_remove_word_text_textword_text_words.py
content/tests/: factory.py  test_models.py
web_project/: settings.py  urls.py
