[tool.poetry]
name = "dj_linguify"
version = "0.1.0"
description = ""
authors = ["Charlie <charlieavery123@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
